--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 24
     buildToolsVersion '25.0.0'
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
+    repositories{
+        flatDir{
+            dirs 'libs'
+        }
+    }
 
     defaultConfig {
         applicationId "com.moviz.gui"
-        minSdkVersion 18
-        targetSdkVersion 21
+        minSdkVersion 21
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         multiDexEnabled = true
@@ -30,10 +35,11 @@ android {
 dependencies {
     apply plugin: 'com.android.application'
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.wahoofitness.connector:wahoo_fitness_android_api@aar'
     compile project(':movizcomunication')
     compile project(':smartgattlib')
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'org.lucasr.dspec:dspec:0.1.1'
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.mcxiaoke.volley:library:1.0.+'
@@ -46,7 +52,8 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.pkmmte.view:circularimageview:1.1'
     //compile 'com.google.android.gms:play-services:8.3.0'
-    compile 'com.android.support:gridlayout-v7:21.0.3'
+    compile 'com.android.support:gridlayout-v7:24.2.1'
+    //compile 'com.android.support:preference-v7:24.2.1'
     compile 'com.android.support:support-v4-preferencefragment:1.0.0'
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.google.android.gms:play-services-fitness:8.3.0'
