Cambiato il sistema delle preferenze. Ora è basasato sul supportv7 standard di android Modificato il sistema di funzionamento delle device keiser in base a quanto visto per la keiser m series app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     compile 'com.pkmmte.view:circularimageview:1.1'
     //compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:gridlayout-v7:24.2.1'
-    //compile 'com.android.support:preference-v7:24.2.1'
-    compile 'com.android.support:support-v4-preferencefragment:1.0.0'
+    compile 'com.android.support:preference-v7:24.2.1'
+    //compile 'com.android.support:support-v4-preferencefragment:1.0.0'
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.google.android.gms:play-services-fitness:8.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.3.0'
