Cambiamenti per passare a velocity 2.1. Da testare per bene e rovare un modo per integrare il jar di velocity nell'apk. Così dà errore.

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ allprojects {
         jcenter()
         mavenLocal()
     }
-    tasks.withType(JavaCompile) {
+    /*tasks.withType(JavaCompile) {
         sourceCompatibility = "1.7"
         targetCompatibility = "1.7"
-    }
+    }*/
 }
