--- a/movizcomunication/build.gradle
+++ b/movizcomunication/build.gradle
@@ -9,7 +9,8 @@ jar {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':velocity-engine-core-2.1')
 }
 
 task hello {
