Changed log type and updated gradle

--- a/movizcomunication/build.gradle
+++ b/movizcomunication/build.gradle
@@ -9,7 +9,7 @@ jar {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 task hello {
