--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,19 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '28.0.3'
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'org/apache/velocity/tools/view/velocity.properties'
+        exclude 'org/apache/velocity/tools/generic/times.properties'
+        exclude 'org/apache/velocity/runtime/defaults/directive.properties'
+        exclude 'org/apache/velocity/runtime/defaults/velocity.properties'
+        exclude 'org/apache/velocity/tools/view/tools.xml'
+        exclude 'org/apache/velocity/tools/struts/tools.xml'
+        exclude 'org/apache/velocity/tools/generic/tools.xml'
+        exclude 'org/apache/velocity/texen/defaults/texen.properties'
+        exclude 'META-INF/velocity-view.tld'
     }
     repositories{
         flatDir{
@@ -34,34 +43,38 @@ android {
 
 dependencies {
     apply plugin: 'com.android.application'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.wahoofitness.connector:wahoo_fitness_android_api@aar'
-    compile project(':movizcomunication')
-    compile project(':smartgattlib')
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'org.lucasr.dspec:dspec:0.1.1'
-    compile 'it.neokree:MaterialTabs:0.11'
-    compile 'com.mcxiaoke.volley:library:1.0.+'
-    compile 'com.telly:mrvector:0.2.0'
-    compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
-    compile 'me.tatarka.support:jobscheduler:0.1.1'
-    compile 'jp.wasabeef:recyclerview-animators:1.1.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.easing:library:1.0.1@aar'
-    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
-    compile 'com.pkmmte.view:circularimageview:1.1'
-    //compile 'com.google.android.gms:play-services:8.3.0'
-    compile 'com.android.support:gridlayout-v7:24.2.1'
-    compile 'com.android.support:preference-v7:24.2.1'
-    //compile 'com.android.support:support-v4-preferencefragment:1.0.0'
-    compile 'com.github.clans:fab:1.6.2'
-    compile 'com.google.android.gms:play-services-fitness:8.3.0'
-    compile 'com.google.android.gms:play-services-wearable:8.3.0'
-    compile 'no.nordicsemi.android:log:2.1.1'
-    //compile 'com.google.android.gms:play-services-ads:8.3.0'
-    //compile 'com.google.android.gms:play-services-identity:8.3.0'
-    //compile 'com.google.android.gms:play-services-gcm:8.3.0'
-    compile 'com.facebook.stetho:stetho:1.4.1'
-    compile 'com.android.support:multidex:1.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.wahoofitness.connector:wahoo_fitness_android_api@aar'
+    implementation project(':movizcomunication')
+    implementation project(':smartgattlib')
+    implementation 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'com.android.support:recyclerview-v7:24.2.1'
+    implementation 'org.lucasr.dspec:dspec:0.1.1'
+    implementation 'it.neokree:MaterialTabs:0.11'
+    implementation 'com.mcxiaoke.volley:library:1.0.+'
+    implementation 'com.telly:mrvector:0.2.0'
+    implementation 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
+    implementation 'me.tatarka.support:jobscheduler:0.1.1'
+    implementation 'jp.wasabeef:recyclerview-animators:1.1.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.easing:library:1.0.1@aar'
+    implementation 'com.daimajia.androidanimations:library:1.1.3@aar'
+    implementation 'com.pkmmte.view:circularimageview:1.1'
+    //implementation 'com.google.android.gms:play-services:8.3.0'
+    implementation 'com.android.support:gridlayout-v7:24.2.1'
+    implementation 'com.android.support:preference-v7:24.2.1'
+    //implementation 'com.android.support:support-v4-preferencefragment:1.0.0'
+    implementation 'com.github.clans:fab:1.6.2'
+    implementation 'com.google.android.gms:play-services-fitness:8.3.0'
+    implementation 'com.google.android.gms:play-services-wearable:8.3.0'
+    // https://mvnrepository.com/artifact/com.android.support/support-annotations
+    //implementation group: 'com.android.support', name: 'support-annotations', version: '28.0.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'no.nordicsemi.android:log:2.2.0'
+    implementation 'no.nordicsemi.android:log-timber:2.2.0'
+    //implementation 'com.google.android.gms:play-services-ads:8.3.0'
+    //implementation 'com.google.android.gms:play-services-identity:8.3.0'
+    //implementation 'com.google.android.gms:play-services-gcm:8.3.0'
+    implementation 'com.facebook.stetho:stetho:1.4.1'
+    implementation 'com.android.support:multidex:1.0.1'
 }
